// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect base demo works fine 1`] = `
<div
  class="tdesign-tree-select-base"
>
  <div>
    <div
      class="t-popup-reference t-select-popup-reference"
      style="position: relative;"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      />
      <div
        class="t-select t-size-m t-select-selected"
      >
        <span
          class="t-select-placeholder"
          style="display: none;"
        >
          请选择
        </span>
        <span
          class="t-select-selectedSingle"
          title="1.1"
        >
          1.1
        </span>
        <div
          class="t-input t-size-m t-select-input"
          style="display: none;"
        >
          <input
            class="t-input__inner"
            placeholder="1.1"
            type="text"
          />
        </div>
        <svg
          class="t-icon t-icon-chevron-down t-size-m t-select-right-icon"
          name="chevron-down"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="t-icon t-icon-close t-size-m t-select-right-icon"
          name="close"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon"
          name="loading"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="resize-sensor"
        dir="ltr"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          class="resize-sensor-expand"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s;"
          />
        </div>
        <div
          class="resize-sensor-shrink"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect filterable demo works fine 1`] = `
<div
  class="tdesign-tree-select-filterable"
>
  <div
    class="operation"
  >
    <div
      class="t-radio-group t-radio-group-solid t-radio-group-medium"
    >
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="default"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          默认
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="function"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          自定义方法
        </span>
      </label>
    </div>
  </div>
   
  <div>
    <div
      class="t-popup-reference t-select-popup-reference"
      style="position: relative;"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      />
      <div
        class="t-select t-size-m t-select-selected"
      >
        <span
          class="t-select-placeholder"
          style="display: none;"
        >
          请选择
        </span>
        <span
          class="t-select-selectedSingle"
          title="1.1"
        >
          1.1
        </span>
        <div
          class="t-input t-size-m t-select-input"
          style="display: none;"
        >
          <input
            class="t-input__inner"
            placeholder="1.1"
            type="text"
          />
        </div>
        <svg
          class="t-icon t-icon-chevron-down t-size-m t-select-right-icon"
          name="chevron-down"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="t-icon t-icon-close t-size-m t-select-right-icon"
          name="close"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon"
          name="loading"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="resize-sensor"
        dir="ltr"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          class="resize-sensor-expand"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s;"
          />
        </div>
        <div
          class="resize-sensor-shrink"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect lazy demo works fine 1`] = `
<div
  class="tdesign-tree-select-lazy"
>
  <div>
    <div
      class="t-popup-reference t-select-popup-reference"
      style="position: relative;"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      />
      <div
        class="t-select t-size-m"
      >
        <span
          class="t-select-placeholder"
        >
          请选择
        </span>
        <div
          class="t-input t-size-m t-select-input"
          style="display: none;"
        >
          <input
            class="t-input__inner"
            placeholder="请选择"
            type="text"
          />
        </div>
        <svg
          class="t-icon t-icon-chevron-down t-size-m t-select-right-icon"
          name="chevron-down"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="t-icon t-icon-close t-size-m t-select-right-icon"
          name="close"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon"
          name="loading"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="resize-sensor"
        dir="ltr"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          class="resize-sensor-expand"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s;"
          />
        </div>
        <div
          class="resize-sensor-shrink"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect multiple demo works fine 1`] = `
<div
  class="tdesign-tree-select-multiple"
>
  <div>
    <div
      class="t-popup-reference t-select-popup-reference"
      style="position: relative;"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      />
      <div
        class="t-select t-size-m t-select-selected"
      >
        <span
          class="t-select-placeholder"
          style="display: none;"
        >
          请选择
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          1.1
          <svg
            class="t-icon t-icon-close"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          1.2
          <svg
            class="t-icon t-icon-close"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="t-input t-size-m t-select-input"
          style="display: none;"
        >
          <input
            class="t-input__inner"
            type="text"
          />
        </div>
        <svg
          class="t-icon t-icon-chevron-down t-size-m t-select-right-icon"
          name="chevron-down"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="t-icon t-icon-close t-size-m t-select-right-icon"
          name="close"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon"
          name="loading"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="resize-sensor"
        dir="ltr"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          class="resize-sensor-expand"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s;"
          />
        </div>
        <div
          class="resize-sensor-shrink"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect prefix demo works fine 1`] = `
<div
  class="tdesign-tree-select-prefix"
>
  <div>
    <div
      class="t-popup-reference t-select-popup-reference"
      style="position: relative;"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      />
      <div
        class="t-select t-size-m t-has-prefix"
      >
        <span
          class="t-select-left-icon"
        >
          <svg
            class="t-icon t-icon-user"
          >
            <use
              xlink:href="#t-icon-user"
            />
          </svg>
        </span>
        <span
          class="t-select-placeholder"
        >
          请输入
        </span>
        <div
          class="t-input t-size-m t-select-input"
          style="display: none;"
        >
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
          />
        </div>
        <svg
          class="t-icon t-icon-chevron-down t-size-m t-select-right-icon"
          name="chevron-down"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="t-icon t-icon-close t-size-m t-select-right-icon"
          name="close"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon"
          name="loading"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="resize-sensor"
        dir="ltr"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          class="resize-sensor-expand"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s;"
          />
        </div>
        <div
          class="resize-sensor-shrink"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
